Moved knowledge about "sensitive headers" to RequestLogger, which no longer has any static methods. Header transformers can now be added to RequestLogger for more flexible masking etc. of headers. Updated Checkstyle dependencies and rules, in order to support all Java 17 features.